--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.datasource.name=snakestore_prod
 spring.jpa.show-sql=true
 spring.h2.console.enabled=true
+
+spring.banner.location=classpath:/banner.txt
